--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,5 +6,8 @@
   "browser_action": {
     "default_icon": "icon.png"
   },
+  "background": {
+    "scripts": ["mcommand.js"]   // TODO: add jQuery
+  },
   "permissions": []
 }
