--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,8 +6,16 @@
   "browser_action": {
     "default_icon": "icon.png"
   },
-  "background": {
-    "scripts": ["mcommand.js"]   // TODO: add jQuery
-  },
-  "permissions": ["tabs"]
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["mcommand.js"],
+      "run_at": "document_end"
+    }
+  ],
+  //"background": {
+    //"scripts": ["mcommand.js"]   // TODO: add jQuery
+  //},
+  //"permissions": ["tabs"]
+  "permissions": []
 }
