--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,13 +9,9 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["mcommand.js"],
+      "js": ["jquery-1.7.2.min.js", "mcommand.js"],
       "run_at": "document_end"
     }
   ],
-  //"background": {
-    //"scripts": ["mcommand.js"]   // TODO: add jQuery
-  //},
-  //"permissions": ["tabs"]
   "permissions": []
 }
